[gd_scene load_steps=5 format=3 uid="uid://do3lt61x3sp61"]

[ext_resource type="Script" path="res://Objects/FloatAwayText/float_away_text.gd" id="1_q5ipf"]

[sub_resource type="Animation" id="Animation_pb7hl"]
resource_name = "Float"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.6, -1, -60, -0.0999999, 7, 0.2, -29),
"times": PackedFloat32Array(0, 0.6, 1.8)
}

[sub_resource type="Animation" id="Animation_p5at2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_isclc"]
_data = {
"Float": SubResource("Animation_pb7hl"),
"RESET": SubResource("Animation_p5at2")
}

[node name="FloatAwayText" type="Node2D"]
script = ExtResource("1_q5ipf")

[node name="Label" type="Label" parent="."]
offset_right = 200.0
offset_bottom = 23.0
scale = Vector2(0.3, 0.3)
text = "text"
autowrap_mode = 2

[node name="FloatAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_isclc")
}

[connection signal="animation_finished" from="FloatAnimation" to="." method="_on_float_animation_animation_finished"]
